# Layout-Generator

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  README.md  index.html  prompts.md  pyproject.toml  requirements.txt
backend/: DOC_AGENT_CONNECT.md  README.md  app.py  doc_agent.py  requirements.txt  run_backend.bat  run_backend.sh
docs/: DRAWING_AGENT_MODULE_ARCHITECTURE.md  DRAWING_AGENT_STATUS.md  DRAWING_DERIVATION.md  PROGRESS.md  RL_COLAB_SETUP.md  USAGE.md  alignment_audit.md  audit_0607_worklist.md  decisions.md  rl_guide.md
examples/: golden_spec.json  urs_mab_8000L.json
input_urs/: README.md  URS_ConceptualDesign for layout_0607-2.xlsx  URS_ConceptualDesign for layout_0607-3.xlsx  URS_ConceptualDesign for layout_0607-4.xlsx  URS_ConceptualDesign for layout_0607-5.xlsx  urs test 2.xlsx  urs test.converted.xlsx  urs test.numbers  urs test.xlsx
output/: baselines.json  bench_v2_internal_spec.json  c1c3_pipeline.json  c3b_room_map.json  spec_A_small_aseptic_v4.json  spec_B_large_multiproduct_v4.json  spec_C_closed_system_v4.json  spec_from_urs.json  spec_v4.json  teammate_engine_output.json  urs_test_spec.json
scripts/: baselines.py  c1c3_pipeline.py  c3b_room_map.py  gen_presentation_svgs.py  golden_nne.py  svg_to_dxf.py
src/: URS_ConceptualDesign for layout_0516.xlsx  cli.py
tests/: _legacy_spec.py  test_cpsat_c0.py  test_cpsat_c1a.py  test_cpsat_c1b.py  test_cpsat_c3a.py  test_cpsat_c3b.py  test_cpsat_pipeline.py  test_data_adapter.py  test_drawing_agent.py  test_engine_e2e.py  test_golden_nne.py  test_layout_validation.py  test_reward.py  (+2 more)
(+183 files in other folders)
